# cosmos

./: .gitignore  CMakeLists.txt  build.sh  package.xml
src/: .clang-format  camera.py  existing_renderer.py  gaussian_renderer.py  gaussian_representation.py  imgui.ini  imgui_manager.py  input_handler.py  main.cpp  main.py  util.py  worldsettings.py
src/ui/: CMakeLists.txt  Camera.hpp  MainWindow.cpp  MainWindow.hpp  mainview.cpp  mainview.h  userinput.cpp  vertex.hpp
src/ui/shaders/: fragshader.glsl  gau_vert.glsl  vertshader.glsl
